NodeVisitor: Use Double/Long.valueOf instead of new
Double::new, Long::new, etc. are deprecated for removal since Java 9.

Use valueOf instead.